# paradox-game-mod-manager

./: .gitignore  CHANGELOG.md  README.md  Taskfile.yml  launcher-settings.json  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: check.yml  codeql.yml  release.yml
src/: __init__.py  cmd.py  dialog.py  logger.py  main.py  mods.py  monkey.py  path.py  settings.py  steam_clients.py  utils.py  validator.py
src/cdn/: __init__.py  download.py  manifests.py
src/pages/: __init__.py  install.py  start.py  uninstall.py  update.py
src/pages/settings/: __init__.py  certificate.py  download_max_threads.py  max_chunk_size.py  max_tasks_num.py  max_threads.py  users.py
tests/: test_get_item_children.py
tools/: build.py  check_account.py  get_info_for_build.py  lndl_config.py  setup_project.py
