[project]
name = "paradox-game-mod-manager"
version = "1.0.0"
description = "P社游戏模组管理器"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio-gevent",
    "beautifulsoup4>=4.12.3",
    "gevent>=24.11.1",
    "prompt-toolkit>=3.0.48",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "steam[client]",
]

[tool.uv]
dev-dependencies = [
    "nuitka>=2.5.1",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
    "tomli>=2.1.0",
]

[tool.uv.sources]
steam = { git = "https://github.com/Arama0517/steam.git" }
asyncio-gevent = { git = "https://github.com/Arama0517/asyncio-gevent.git" }

[tool.ruff]
preview = true
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "N", "I"]

[tool.ruff.lint.per-file-ignores]
"src/main.py" = ["E402"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.nuitka]
script-name = 'src/main.py'
output-dir = 'build'
output-file = '{project.name}.exe'

# 编译选项
clang = true
msvc = "latest"
mode = "onefile"

# 文件信息
company-name = "Arama"
copyright = "Copyright ©Arama. All rights reserved."

product-version = "{project.version}"
product-name = '{project.name}'

file-version = "{project.version}"
file-description = "{project.description}"

# 依赖
include-package = ['steam.protobufs']
assume-yes-for-downloads = true
